# portfolio

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
nate_site/: __init__.py  about_me.py  jobs.py
nate_site/templates/: about_me.html  base.html  index.html  jobs.html
